add allocate function
