# pkg/k8s/api/v1/zz_generated.deepcopy.go
@@ -22,16 +22,106 @@ limitations under the License.
 package v1
 
 import (
+	metav1 "k8s.io/apimachinery/pkg/apis/meta/v1"
 	runtime "k8s.io/apimachinery/pkg/runtime"
 )
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *IPAMEndpoint) DeepCopyInto(out *IPAMEndpoint) {
+	*out = *in
+	out.TypeMeta = in.TypeMeta
+	in.ObjectMeta.DeepCopyInto(&out.ObjectMeta)
+	out.Spec = in.Spec
+	out.Status = in.Status
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new IPAMEndpoint.
+func (in *IPAMEndpoint) DeepCopy() *IPAMEndpoint {
+	if in == nil {
+		return nil
+	}
+	out := new(IPAMEndpoint)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyObject is an autogenerated deepcopy function, copying the receiver, creating a new runtime.Object.
+func (in *IPAMEndpoint) DeepCopyObject() runtime.Object {
+	if c := in.DeepCopy(); c != nil {
+		return c
+	}
+	return nil
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *IPAMEndpointList) DeepCopyInto(out *IPAMEndpointList) {
+	*out = *in
+	out.TypeMeta = in.TypeMeta
+	in.ListMeta.DeepCopyInto(&out.ListMeta)
+	if in.Items != nil {
+		in, out := &in.Items, &out.Items
+		*out = make([]IPAMEndpoint, len(*in))
+		for i := range *in {
+			(*in)[i].DeepCopyInto(&(*out)[i])
+		}
+	}
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new IPAMEndpointList.
+func (in *IPAMEndpointList) DeepCopy() *IPAMEndpointList {
+	if in == nil {
+		return nil
+	}
+	out := new(IPAMEndpointList)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyObject is an autogenerated deepcopy function, copying the receiver, creating a new runtime.Object.
+func (in *IPAMEndpointList) DeepCopyObject() runtime.Object {
+	if c := in.DeepCopy(); c != nil {
+		return c
+	}
+	return nil
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *IPAMEndpointSpec) DeepCopyInto(out *IPAMEndpointSpec) {
+	*out = *in
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new IPAMEndpointSpec.
+func (in *IPAMEndpointSpec) DeepCopy() *IPAMEndpointSpec {
+	if in == nil {
+		return nil
+	}
+	out := new(IPAMEndpointSpec)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *IPAMEndpointStatus) DeepCopyInto(out *IPAMEndpointStatus) {
+	*out = *in
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new IPAMEndpointStatus.
+func (in *IPAMEndpointStatus) DeepCopy() *IPAMEndpointStatus {
+	if in == nil {
+		return nil
+	}
+	out := new(IPAMEndpointStatus)
+	in.DeepCopyInto(out)
+	return out
+}
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *IPPool) DeepCopyInto(out *IPPool) {
 	*out = *in
 	out.TypeMeta = in.TypeMeta
 	in.ObjectMeta.DeepCopyInto(&out.ObjectMeta)
-	out.Spec = in.Spec
-	out.Status = in.Status
+	in.Spec.DeepCopyInto(&out.Spec)
+	in.Status.DeepCopyInto(&out.Status)
 }
 
 // DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new IPPool.
@@ -87,6 +177,51 @@ func (in *IPPoolList) DeepCopyObject() runtime.Object {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *IPPoolSpec) DeepCopyInto(out *IPPoolSpec) {
 	*out = *in
+	if in.IPVersion != nil {
+		in, out := &in.IPVersion, &out.IPVersion
+		*out = new(int64)
+		**out = **in
+	}
+	if in.IPs != nil {
+		in, out := &in.IPs, &out.IPs
+		*out = make([]string, len(*in))
+		copy(*out, *in)
+	}
+	if in.ExcludeIPs != nil {
+		in, out := &in.ExcludeIPs, &out.ExcludeIPs
+		*out = make([]string, len(*in))
+		copy(*out, *in)
+	}
+	if in.Gateway != nil {
+		in, out := &in.Gateway, &out.Gateway
+		*out = new(string)
+		**out = **in
+	}
+	if in.Routes != nil {
+		in, out := &in.Routes, &out.Routes
+		*out = make([]Route, len(*in))
+		copy(*out, *in)
+	}
+	if in.NamespaceAffinity != nil {
+		in, out := &in.NamespaceAffinity, &out.NamespaceAffinity
+		*out = new(metav1.LabelSelector)
+		(*in).DeepCopyInto(*out)
+	}
+	if in.NodeAffinity != nil {
+		in, out := &in.NodeAffinity, &out.NodeAffinity
+		*out = new(metav1.LabelSelector)
+		(*in).DeepCopyInto(*out)
+	}
+	if in.Default != nil {
+		in, out := &in.Default, &out.Default
+		*out = new(bool)
+		**out = **in
+	}
+	if in.Disable != nil {
+		in, out := &in.Disable, &out.Disable
+		*out = new(bool)
+		**out = **in
+	}
 }
 
 // DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new IPPoolSpec.
@@ -102,6 +237,21 @@ func (in *IPPoolSpec) DeepCopy() *IPPoolSpec {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *IPPoolStatus) DeepCopyInto(out *IPPoolStatus) {
 	*out = *in
+	if in.AllocatedIPs != nil {
+		in, out := &in.AllocatedIPs, &out.AllocatedIPs
+		*out = new(string)
+		**out = **in
+	}
+	if in.TotalIPCount != nil {
+		in, out := &in.TotalIPCount, &out.TotalIPCount
+		*out = new(int64)
+		**out = **in
+	}
+	if in.AllocatedIPCount != nil {
+		in, out := &in.AllocatedIPCount, &out.AllocatedIPCount
+		*out = new(int64)
+		**out = **in
+	}
 }
 
 // DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new IPPoolStatus.
@@ -110,6 +260,21 @@ func (in *IPPoolStatus) DeepCopy() *IPPoolStatus {
 		return nil
 	}
 	out := new(IPPoolStatus)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *Route) DeepCopyInto(out *Route) {
+	*out = *in
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new Route.
+func (in *Route) DeepCopy() *Route {
+	if in == nil {
+		return nil
+	}
+	out := new(Route)
 	in.DeepCopyInto(out)
 	return out
 }
